--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -138,16 +138,10 @@
                         <!-- Formulário de pesquisa -->
                         <form id="searchForm">
                             <div class="form-group">
+                                <input type="search" id="turma" class="turma" >
                                 <label for="turma">Selecione a Turma:</label>
-                                <select id="turma" name="turma" required>
-                                    <option value="">Selecione uma turma</option>
-                                    <option value="1A">1º Ano A</option>
-                                    <option value="1B">1º Ano B</option>
-                                    <option value="2A">2º Ano A</option>
-                                    <option value="2B">2º Ano B</option>
-                                    <option value="3A">3º Ano A</option>
-                                    <option value="3B">3º Ano B</option>
-                                </select>
+
+                                
                             </div>
 
                             <button type="submit" class="btn btn-primary">Buscar Alunos</button>
