--- a/public/index.html
+++ b/public/index.html
@@ -264,8 +264,22 @@
                                     <label class="required" for="aluno-periodo">Período</label>
                                     <select id="aluno-periodo" name="periodo" required>
                                         <option value="">Selecione</option>
-                                        <option value="1">1º Período</option>
-                                        <option value="2">2º Período</option>
+                                        <option value="9">9º Ano A</option>
+                                        <option value="9">9º Ano B</option>
+                                        <option value="9">9º Ano C</option>
+                                        <option value="9">9º Ano D</option>
+                                        <option value="1">1º Ano A</option>
+                                        <option value="1">1º Ano B</option>
+                                        <option value="1">1º Ano C</option>
+                                        <option value="1">1º Ano D</option>
+                                        <option value="2">2º Ano A</option>
+                                        <option value="2">2º Ano B</option>
+                                        <option value="2">2º Ano C</option>
+                                        <option value="2">2º Ano D</option>
+                                        <option value="3">3º Ano A</option>
+                                        <option value="3">3º Ano B</option>
+                                        <option value="3">3º Ano C</option>
+                                        <option value="3">3º Ano D</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
