--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
                             
                             <div class="form-row">
                                 <div class="form-group">
-                                    <label class="required" for="aluno-periodo">Período</label>
+                                    <label class="required" for="aluno-periodo">Turma</label>
                                     <select id="aluno-periodo" name="periodo" required>
                                         <option value="">Selecione</option>
                                         <option value="9">9º Ano A</option>
