--- a/public/consulta.html
+++ b/public/consulta.html
@@ -170,10 +170,8 @@
             <tr>
             
                 <th>Nome</th>
-                <th>Cpf</th>
+                <th>CPF</th>
                 <th>Email</th>
-                <th>Turma</th>
-                <th>Responsavel</th>
                 <th>Telefone Responsavel</th>
             
             </tr>
