--- a/public/consulta.html
+++ b/public/consulta.html
@@ -170,8 +170,10 @@
             <tr>
             
                 <th>Nome</th>
+                <th>CGM</th>
                 <th>CPF</th>
                 <th>Email</th>
+                <th>Turma</th>
                 <th>Telefone Responsavel</th>
             
             </tr>
