--- a/public/index.html
+++ b/public/index.html
@@ -261,25 +261,25 @@
                             
                             <div class="form-row">
                                 <div class="form-group">
-                                    <label class="required" for="aluno-periodo">Período</label>
-                                    <select id="aluno-periodo" name="periodo" required>
+                                    <label class="required" for="aluno-periodo">Turma</label>
+                                    <select id="aluno-turma" name="periodo" required>
                                         <option value="">Selecione</option>
-                                        <option value="9">9º Ano A</option>
-                                        <option value="9">9º Ano B</option>
-                                        <option value="9">9º Ano C</option>
-                                        <option value="9">9º Ano D</option>
-                                        <option value="1">1º Ano A</option>
-                                        <option value="1">1º Ano B</option>
-                                        <option value="1">1º Ano C</option>
-                                        <option value="1">1º Ano D</option>
-                                        <option value="2">2º Ano A</option>
-                                        <option value="2">2º Ano B</option>
-                                        <option value="2">2º Ano C</option>
-                                        <option value="2">2º Ano D</option>
-                                        <option value="3">3º Ano A</option>
-                                        <option value="3">3º Ano B</option>
-                                        <option value="3">3º Ano C</option>
-                                        <option value="3">3º Ano D</option>
+                                        <option value="9º Ano A">9º Ano A</option>
+                                        <option value="9º Ano B">9º Ano B</option>
+                                        <option value="9º Ano C">9º Ano C</option>
+                                        <option value="9º Ano D">9º Ano D</option>
+                                        <option value="1º Ano A">1º Ano A</option>
+                                        <option value="1º Ano B">1º Ano B</option>
+                                        <option value="1º Ano C">1º Ano C</option>
+                                        <option value="1º Ano D">1º Ano D</option>
+                                        <option value="2º Ano A">2º Ano A</option>
+                                        <option value="2º Ano B">2º Ano B</option>
+                                        <option value="2º Ano C">2º Ano C</option>
+                                        <option value="2º Ano D">2º Ano D</option>
+                                        <option value="3º Ano A">3º Ano A</option>
+                                        <option value="3º Ano B">3º Ano B</option>
+                                        <option value="3º Ano C">3º Ano C</option>
+                                        <option value="3º Ano D">3º Ano D</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
