--- a/public/freq.html
+++ b/public/freq.html
@@ -171,7 +171,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="tab2" class="btn btn-block">Registrar Ausências</label>
+                                    <label for="tab2" class="btn btn-block" onclick="cadastrarfreq(event)">Registrar Ausências</label>
                                 </div>
                             </form>
 
