--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -279,12 +279,22 @@
                                 <label for="filtroTurma">Filtrar por Turma:</label>
                                 <select id="filtroTurma" name="filtroTurma">
                                     <option value="">Todas as turmas</option>
-                                    <option value="1A">1º Ano A</option>
-                                    <option value="1B">1º Ano B</option>
-                                    <option value="2A">2º Ano A</option>
-                                    <option value="2B">2º Ano B</option>
-                                    <option value="3A">3º Ano A</option>
-                                    <option value="3B">3º Ano B</option>
+                                        <option value="9º Ano A">9º Ano A</option>
+                                        <option value="9º Ano B">9º Ano B</option>
+                                        <option value="9º Ano C">9º Ano C</option>
+                                        <option value="9º Ano D">9º Ano D</option>
+                                        <option value="1º Ano A">1º Ano A</option>
+                                        <option value="1º Ano B">1º Ano B</option>
+                                        <option value="1º Ano C">1º Ano C</option>
+                                        <option value="1º Ano D">1º Ano D</option>
+                                        <option value="2º Ano A">2º Ano A</option>
+                                        <option value="2º Ano B">2º Ano B</option>
+                                        <option value="2º Ano C">2º Ano C</option>
+                                        <option value="2º Ano D">2º Ano D</option>
+                                        <option value="3º Ano A">3º Ano A</option>
+                                        <option value="3º Ano B">3º Ano B</option>
+                                        <option value="3º Ano C">3º Ano C</option>
+                                        <option value="3º Ano D">3º Ano D</option>
                                 </select>
                             </div>
 
@@ -315,7 +325,7 @@
                     <div class="buttons-container">
                         <button type="button" class="btn btn-secondary">Voltar</button>
                         <button type="reset" class="btn btn-danger" onclick="limparSelecoes()">Limpar</button>
-                        <button type="submit" class="btn btn-success" onclick=" cadastrarfo(event)">Enviar Encaminhamento</button>
+                        <button type="submit" class="btn btn-success" onclick=" cadastrarencaminhamento(event)">Enviar Encaminhamento</button>
                     </div>
                     <!-- Lista de F.O disponíveis para encaminhamento -->
                     <section class="form-section">
@@ -391,7 +401,7 @@
                             <div class="buttons-container">
                                 <button type="button" class="btn btn-secondary">Voltar</button>
                                 <button type="reset" class="btn btn-danger" onclick="limparSelecoes()">Limpar</button>
-                                <button type="submit" class="btn btn-success" onclick=" cadastrarfo(event)">Enviar Encaminhamento</button>
+                                <button type="submit" class="btn btn-success" onclick=" cadastrarencaminhamento(event)">Enviar Encaminhamento</button>
                             </div>
                         </form>
                     </section>
