--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Formulário de Cadastro</title>
     <link rel="stylesheet" href="cadastro.css">
     <script src="cadastro.js"></script>
-    aluno-matricula<script src="funcionario.js"></script>
+    <script src="funcionario.js"></script>
 </head>
 <body>  
     <header class="header">
