--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -7,7 +7,8 @@
     <title>Registro de Fatos Observados (F.O)</title>
     <link rel="stylesheet" href="geral.css">
     <link rel="stylesheet" href="Fo.css">
-    <script src="fo.js"></script>       
+    <script src="fo.js"></script> 
+    <script src="ata.js"></script>
 
 </head>
 <body>
@@ -275,7 +276,7 @@
                         </form>
                     </section>
 
-                    <!-- Lista de atas existentes -->
+                    <!-- Lista de atas existentes 
                     <section class="form-section">
                         <div class="student-info" id="studentInfo">
                             <button type="button" onclick="listarAlunos()" class="alinhaBtns">Listar aluno</button>
@@ -295,7 +296,7 @@
                        </thead>
                     </section>
                 </div>
-
+-->
                <div id="encaminhamento" class="tab-content">
                     <div class="encaminhar-info">
                         <h3>Encaminhamento de Fatos Observados</h3>
