--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -7,7 +7,8 @@
     <title>Registro de Fatos Observados (F.O)</title>
     <link rel="stylesheet" href="geral.css">
     <link rel="stylesheet" href="Fo.css">
-    <script src="fo.js"></script>       
+    <script src="fo.js"></script>      
+    <script src="ata.js"></script>
 
 </head>
 <body>
