--- a/public/freq.html
+++ b/public/freq.html
@@ -135,38 +135,26 @@
                                 <div class="form-group">
                                     <label>Alunos Ausentes:</label>
                                     <div class="student-checkboxes">
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="1">
-                                            Ana Silva
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="2">
-                                            Bruno Santos
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="3">
-                                            Carla Oliveira
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="4">
-                                            Daniel Pereira
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="5">
-                                            Eduarda Costa
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="6">
-                                            Fábio Almeida
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="7">
-                                            Gabriela Martins
-                                        </label>
-                                        <label class="student-checkbox">
-                                            <input type="checkbox" name="absent" value="8">
-                                            Henrique Lima
-                                        </label>
+                                        <label class="student-checkbox">Turma</label> 
+                                <select id="aluno-turma" name="turma" required>
+                                    <option value="">Selecione</option>
+                                    <option value="9º Ano A">9º Ano A</option>
+                                    <option value="9º Ano B">9º Ano B</option>
+                                    <option value="9º Ano C">9º Ano C</option>
+                                    <option value="9º Ano D">9º Ano D</option>
+                                    <option value="1º Ano A">1º Ano A</option>
+                                    <option value="1º Ano B">1º Ano B</option>
+                                    <option value="1º Ano C">1º Ano C</option>
+                                    <option value="1º Ano D">1º Ano D</option>
+                                    <option value="2º Ano A">2º Ano A</option>
+                                    <option value="2º Ano B">2º Ano B</option>
+                                    <option value="2º Ano C">2º Ano C</option>
+                                    <option value="2º Ano D">2º Ano D</option>
+                                    <option value="3º Ano A">3º Ano A</option>
+                                    <option value="3º Ano B">3º Ano B</option>
+                                    <option value="3º Ano C">3º Ano C</option>
+                                    <option value="3º Ano D">3º Ano D</option>
+                                </select>
                                     </div>
                                 </div>
 
