--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -414,12 +414,12 @@
                         <h2>Dados do Encaminhamento</h2>
                         
                         <form id="encaminhamentoForm">
-                            <div class="fo-summary">
+                            <!-- <div class="fo-summary">
                                 <h4>Resumo dos F.O Selecionados:</h4>
                                 <div id="foSummary">
                                     <p>Nenhum F.O selecionado ainda. Clique nos itens acima para selecioná-los.</p>
                                 </div>
-                            </div>
+                            </div> -->
                             
                             <div class="form-group">
                                 <label for="ataData">Data de registro:</label>
@@ -448,6 +448,8 @@
                             <div class="form-group">
                                 <label for="prioridade">Prioridade:</label>
                                 <select id="prioridade" name="prioridade" required>
+                                    <option value="direcao">Direção</option>
+                                    <option value="psicologia">Psicologia Escolar</option>
                                 </select>
                             </div>
 
