--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="Fo.css">
     <script src="fo.js"></script>      
     <script src="ata.js"></script>
+    <script scr="encaminhamento.js"></script>
+    
 
 </head>
 <body>
@@ -445,13 +447,13 @@
                                     placeholder="Nome do profissional ou setor específico">
                             </div>
     
-                            <div class="form-group">
+                            <!-- <div class="form-group">
                                 <label for="prioridade">Prioridade:</label>
                                 <select id="prioridade" name="prioridade" required>
                                     <option value="direcao">Direção</option>
                                     <option value="psicologia">Psicologia Escolar</option>
                                 </select>
-                            </div>
+                            </div> -->
 
                             <div class="form-group">
                                 <label for="ataAssunto">obs:</label>
