--- a/public/index.html
+++ b/public/index.html
@@ -516,6 +516,7 @@
                                     <label class="required" for="func-cargo">Cargo</label>
                                     <select id="func-cargo" name="cargo" required>
                                         <option value="">Selecione</option>
+                                        <option value="monitor">Monitor</option>
                                         <option value="professor">Professor</option>
                                         <option value="secretario">Secretário(a)</option>
                                         <option value="coordenador">Pedagogo(a)</option>
