--- a/public/index.html
+++ b/public/index.html
@@ -545,7 +545,7 @@
                         </div>
                         
                         <div class="btn-container">
-                            <button type="button" class="btn btn-secondary" onclick="voltarPagina()">Voltar</button>
+                            <button type="button" class="btn btn-secondary" onclick="listarfuncionario()">consultar</button>
                             <button type="button" class="btn btn-danger" onclick="cancelarCadastro('funcionario')">Cancelar</button>
                             <button type="submit" class="btn btn-submit" onclick="cadastrarfuncionario(event)">Cadastrar Funcionário</button>
                         </div>
@@ -562,4 +562,5 @@
 
 
 </body>
+
 </html>
