--- a/public/index.html
+++ b/public/index.html
@@ -554,6 +554,21 @@
             </div>
         </div>
     </div>
+  <div>
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>CPF</th>
+                <th>Email</th>
+                <th>Telefone </th>
+            </tr>
+        </thead>
+        <tbody id="tabela-funcionario">
+            <!-- Linhas serão preenchidas pelo JavaScript -->
+        </tbody>
+    </table>
+   </div>
     </main>
     <!-- Rodapé da página -->
     <footer class="footer">
@@ -564,3 +579,4 @@
 </body>
 
 </html>
+
