--- a/public/teste_fo.html
+++ b/public/teste_fo.html
@@ -222,7 +222,7 @@
     <table>
         <thead>
             <tr>
-                <th>Nome</th>
+
                 <th>turma</th>
                 <th>data</th>
                 <th>monitor</th>
@@ -304,16 +304,17 @@
                     <!-- Lista de atas existentes -->
                     <section class="form-section">
                         <div class="student-info" id="studentInfo">
-                            <button type="button" onclick="listarAlunos()" class="alinhaBtns">Listar aluno</button>
+                            <button type="button" onclick="listarata()" class="alinhaBtns">Listar</button>
                             <table>
                                 <thead>
                                     <tr>
                                         <th>Nome</th>
                                         <th>CGM</th>
-                                        <th>CPF</th>
-                                        <th>Email</th>
-                                        <th>Turma</th>
-                                        <th>Telefone Responsável</th>
+                                        <th>professor</th>
+                                        <th>Encaminhamento</th>
+                                        <th>assunto</th>
+                                        <th>data</th>
+                                        <th>conteudo</th>
                                     </tr>
                                 </thead>
                                 <tbody>
